--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="video-responsive" style="padding:52.73% 0 0 0;position:relative;">
 		<iframe src="https://player.vimeo.com/video/837258346?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
 		frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
-		style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+		style="top:0;left:0;width:100%;height:100%;" 
 		title="Work Samples 2024"></iframe>
         <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
