--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class="paragraph">Arijit is an animator & filmmaker based in Montreal.</p>
             <p class="paragraph">Website coming soon.</p>
         </div>
-	 <div class="video-responsive" style="padding:52.73% 0 0 0;position:relative;">
+	 <div class="video-responsive" style=position:relative;">
             <iframe class="video-responsive-item" src="https://player.vimeo.com/video/837258346?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
             frameborder="0" allow="autoplay; fullscreen; picture-in-picture" 
             style="top:0;left:0;width:100%;height:100%;" 
@@ -24,7 +24,7 @@
             <a href="mailto:adebnath.to@gmail.com">adebnath.to@gmail.com</a>.
         </p>
 </container>
-<footer><p>&#169; Arijit Debnath 2024</p></footer>
+<footer><p>&#169; Arijit Debnath 2025</p></footer>
 </section>
 </body>
 </html>
