--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <section>
 <container class="main">
+	<div>
         <div class="heading">
             <h1 class="heading">ARIJIT DEBNATH</h1>
             <p class="paragraph">Arijit is an animator & filmmaker based in Montreal.</p>
@@ -21,8 +22,9 @@
         </div>
         <div class="paragraph">
             <p>For inquiries, or if you'd like to just say hi, please contact 
-            <a href="mailto:adebnath.to@gmail.com">adebnath.to@gmail.com</a>.
-        </p>
+            <a href="mailto:adebnath.to@gmail.com">adebnath.to@gmail.com</a>.</p>
+	</div>
+	</div>
 </container>
 <footer><p>&#169; Arijit Debnath 2025</p></footer>
 </section>
