--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p class="paragraph">Arijit is an animator & filmmaker based in Montreal.</p>
             <p class="paragraph">Website coming soon.</p>
         </div>
-	 <div class="video-responsive" style=position:relative;">
+	 <div class="video-responsive" style=position:absolute;">
             <iframe class="video-responsive-item" src="https://player.vimeo.com/video/837258346?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
             frameborder="0" allow="autoplay; fullscreen; picture-in-picture" 
             style="top:0;left:0;width:100%;height:100%;" 
