--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ativ<!DOCTYPE html>
+<!DOCTYPE html>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -10,9 +10,10 @@ ativ<!DOCTYPE html>
         <div class="heading">
             <h1 class="heading">ARIJIT DEBNATH</h1>
             <p class="paragraph">Arijit is an animator & filmmaker based in Montreal.</p>
+            <p class="paragraph">This is my website.</p>
             <p class="paragraph">Website coming soon.</p>
         </div>
-	 <div class="video-responsive" style=position:relative;">
+        <div class="video-responsive" style="padding:52.73% 0 0 0;position:relative;">
             <iframe class="video-responsive-item" src="https://player.vimeo.com/video/837258346?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
             frameborder="0" allow="autoplay; fullscreen; picture-in-picture" 
             style="top:0;left:0;width:100%;height:100%;" 
@@ -21,10 +22,10 @@ ativ<!DOCTYPE html>
         </div>
         <div class="paragraph">
             <p>For inquiries, or if you'd like to just say hi, please contact 
-            <a href="mailto:adebnath.to@gmail.com">adebnath.to@gmail.com</a>.</p>
-	</div>
+            <a href="mailto:adebnath.to@gmail.com">adebnath.to@gmail.com</a>.
+        </p>
 </container>
-<footer><p>&#169; Arijit Debnath 2025</p></footer>
+<footer><p>&#169; Arijit Debnath 2024</p></footer>
 </section>
 </body>
 </html>
