--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1 class="heading">ARIJIT JEET DEBNATH</h1>
             <p class="paragraph">Arijit is an animator & filmmaker based in Montreal.</p>
             <p class="paragraph">This is my website.</p>
-            <p class="paragraph">Website coming soon.</p>
+            <p class="paragraph">Website coming soonish.</p>
         </div>
         <div class="video-responsive" style="padding:52.73% 0 0 0;position:relative;">
             <iframe class="video-responsive-item" src="https://player.vimeo.com/video/837258346?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
