--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <section>
 <container class="main">
         <div class="heading">
-            <h1 class="heading">ARIJIT JEET DEBNATH</h1>
+            <h1 class="heading">ARIJIT DEBNATH</h1>
             <p class="paragraph">Arijit is an animator & filmmaker based in Montreal.</p>
             <p class="paragraph">This is my website.</p>
             <p class="paragraph">Website coming soonish.</p>
