--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
             <p class="paragraph">Website coming soonish.</p>
         </div>
         <div class="video-responsive" style="padding:52.73% 0 0 0;position:relative;">
-            <iframe class="video-responsive-item" src="https://player.vimeo.com/video/837258346?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
-            frameborder="0" allow="autoplay; fullscreen; picture-in-picture" 
-            style="top:0;left:0;width:100%;height:100%;" 
+            <iframe class="video-responsive-item" src="https://player.vimeo.com/video/837258346?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+	    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" mozallowfullscreen webkitallowfullscreen allowfullscreen style="top:0;left:0;width:100%;height:100%;" 
             title="Work Samples 2024"></iframe>
             <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
